[package]
name = "communication"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
quinn = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
anyhow = "1.0.93"
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
rustls-pemfile = "2.2.0"
rcgen = "0.13"
async-trait = "0.1.83"